[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.100006, -0.700001, 0, 0, 0, 0, 1023.1, 1, 0, 0, 0, 0, 1024.8, 601.4, 0, 0, 0, 0, 0, 601.3, 0, 0, 0, 0, 0.100006, -0.700001 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1031.0
margin_bottom = 606.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.240549, 0.518073, 0.539062, 1 )

[node name="Player1" parent="." index="1" instance=ExtResource( 3 )]

modulate = Color( 0.11085, 0.671875, 0.030704, 1 )
_sections_unfolded = [ "Visibility" ]
player_number = 1

[node name="Player2" parent="." index="2" instance=ExtResource( 3 )]

modulate = Color( 0.832031, 0.161038, 0.396934, 1 )
_sections_unfolded = [ "Visibility" ]
player_number = 2

[node name="LevelTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="MobTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition1" type="Position2D" parent="." index="7"]

position = Vector2( 600, 307 )
_sections_unfolded = [ "Transform" ]

[node name="StartPosition2" type="Position2D" parent="." index="8"]

position = Vector2( 431.5, 307.5 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="9"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( 0.100006, -0.700001 )
rotation = 0.0016618
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="10" instance=ExtResource( 4 )]

[connection signal="hit" from="Player1" to="." method="_on_Player1_hit"]

[connection signal="hit" from="Player2" to="." method="_on_Player2_hit"]

[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="new_game"]


